cli/tests/error_029_data_error_format_rust.ts
(async () => {
  await import("data:application/javascript;base64,dGhyb3cgbmV3IEVycm9yKCJiYWQiKTs="); // throw new Error("bad");
})();
